[package]
name = "diesel-tracing-otel"
version = "0.3.6"
authors = ["John Children <john.children@quantinuum.com>", "Richard Peters <shadowrhyder@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Connection telemetry middleware for diesel and tracing"
repository = "https://github.com/Executioner1939/diesel-tracing"
readme = "README.md"
keywords = ["diesel", "logging", "tracing", "database", "opentelemetry"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []

statement-fields = []
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres", "ipnetwork"]
sqlite = ["diesel/sqlite"]
r2d2 = ["diesel/r2d2"]

[dependencies]
diesel = { version = "2.2.12", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"], default-features = false }
ipnetwork = { version = ">=0.12.2, <0.21.0", optional = true }
tracing = "0.1"

[dev-dependencies]
diesel = { version = "2.0", features = ["mysql", "postgres", "sqlite"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
