[package]
name = "otel-instrumentation-diesel"
version = "0.1.8"
authors = ["John Children <john.children@quantinuum.com>", "Richard Peters <shadowrhyder@gmail.com>"]
license = "MIT"
edition = "2021"
description = "OpenTelemetry instrumentation for Diesel ORM"
repository = "https://github.com/hermes-capital-io/hermes-platform"
readme = "README.md"
keywords = ["diesel", "logging", "tracing", "database", "opentelemetry"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []

statement-fields = []
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres", "diesel/network-address", "ipnetwork"]
sqlite = ["diesel/sqlite"]
r2d2 = ["diesel/r2d2"]

[dependencies]
diesel = { version = "2.2.12", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"], default-features = false }
ipnetwork = { version = "0.21.1", optional = true }
tracing = "0.1.41"

[dev-dependencies]
diesel = { version = "2.2.12", features = ["mysql", "postgres", "sqlite"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
